# fih-emergence

./: .INTEGRATION_TEST_PLAN_V2.md.swp  .env.example  .gitignore  .hermes.md  CHANGELOG.md  CODE_REVIEW.md  HARNESS_STATE.md  INTEGRATION_GAP_MATRIX.md  INTEGRATION_SPEC_INVENTORY.md  INTEGRATION_TEST_PLAN_V2.md  PLAN.md  PLAYBOOK.md  README.md  SPEC_REVIEW.md  VERSION.md  config.yaml  fih.db  pyproject.toml  rules  run_hunan_test.py  test_baidu_search.py  test_llm_config.py  test_simple.py  test_workflow.py
.hermes/plans/: 长沙中考信息收集.md
data/: blackboard.db  fih_blackboard.db
docs/: SPEC.md  SPEC_API.md  SPEC_DataStructures.md  SPEC_EI.md  SPEC_NetworkSearch.md  SPEC_REVIEW.md  SPEC_保护机制.md  SPEC_架构实现.md  SPEC_流程.md  SPEC_角色.md  SPEC_黑板.md  TEST_PLAN.md
references/: network_search_exploration.md
results/: 2round-test.md  5round-test.md  5round-v2.md  auto-md.md  balance-test.md  check.md  d1.md  d2.md  data-integrity.md  dbg3.md  dbg5.md  debug-ei.md  debug-intent.md  debug1r.md  f2.md  fact-write.md  final-5round.md  final-robust.md  final-test.md  fix-test.md  fixed-test.md  full-5round.md  h2.md  hint-test.md  hunan-bg-001.md  hunan-industry-survey-r5.json  hunan-industry-survey-r5_history.json  hunan-test.md  kimi-5round.md  kimi-final.md  multi-round.md  new-test.md  p2-t1.md  p2-t2.md  persist-test.md  phase1-final.md  prot-emerge.md  pt2.md  pt5.md  pt6.md  (+25 more)
scripts/: search_v2_verify.py
searxng-data/: settings.yml
src/: fih_emergence_cli.py
tests/: test_auditor.py  test_manager.py  test_network_search.py  test_proposer.py  test_state.py  test_worker.py
(+25 files in other folders)
